# WebGIS-Dev

./: .env  .env.example  .gitignore  API_MANAGEMENT_GUIDE.md  Dockerfile  LAYOUT_POSITIONING_GUIDE.md  LICENSE  LOCATION_SEARCH_COMPLETION_CHECKLIST.md  LOCATION_SEARCH_IMPLEMENTATION.md  LOCATION_SEARCH_SETUP.md  LOCATION_SEARCH_VERIFICATION_REPORT.md  LOCATION_SERVICE_COMPLETION.md  LOCATION_SERVICE_IMPLEMENTATION.md  LocalDev.bat  RANDOM_STYLE_IMPORT_FIX.md  README.md  TEST_LOCATION_SEARCH.md  UpdateReadmeTree.py  Write-Color.ps1  index.html  package-lock.json  package.json  start_server.bat  vite.config.js
.github/: traffic.json  (+1 more)
backend/: .env.example  AGENT_CHAT_FIXES.md  AGENT_CHAT_REPAIR_SUMMARY.md  Dockerfile  README.md  TEST_AVATAR_INDEX_README.md  app.py  docker-compose.yml  frontend_example.html  main.py  pyproject.toml  requirements.txt  test_avatar_index_migration.py  test_location_apis.py
backend/api/: admin.py  agent_chat.py  api_keys_management.py  api_management.py  auth.py  compass_config.py  download.py  external_proxy.py  location.py  minitor.py  monitor.py  proxy.py  spatial.py  statistics.py
backend/api/agent_chat/: __init__.py  constants.py  db.py  quota.py  routes.py  schemas.py  upstream.py  utils.py
backend/core/: task_scheduler.py
backend/download_xyz/: download.py  download_task.py  task_scheduler.py  tile_engine.py
backend/gcj_rectify/: __init__.py  fetch.py  rectify.py  transform.py  url_template.py  utils.py
backend/models/: download_task.py
backend/services/: __init__.py  ip_geo.py
backend/utils/: __init__.py  time_utils.py
(+819 files in other folders)
