[project]
name = "webgis-backend"
version = "0.1.0"
description = "WebGIS 后端服务（FastAPI + Pandas）"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pillow>=11.3.0",
    "rasterio>=1.3.9",
    "sqlmodel>=0.0.16",
    "apscheduler>=3.10.0",
    "supabase",
    "pytz",
    "python-multipart>=0.0.6",
    "shapely>=2.0.0",
]

[tool.uv]
managed = true
